--- a/Assignment1/Assignment1.ipynb
+++ b/Assignment1/Assignment1.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06a53dba",
+   "id": "89b9f90e",
    "metadata": {},
    "source": [
     "## Q2"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c672632",
+   "id": "de5b3ce6",
    "metadata": {},
    "source": [
     "Let the X be a Uniform Random Variable in the range [a,b].<br>\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db0e53b",
+   "id": "1223836f",
    "metadata": {},
    "source": [
     "# Q3"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51860e05",
+   "id": "e5dbfa5b",
    "metadata": {},
    "source": [
     "Consider a Normal Random Variable X with $$ \\mu = 0 ,\\sigma^2 = 3 $$\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb510dfd",
+   "id": "04ca8127",
    "metadata": {},
    "source": [
     "Now lets plot the two\n"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a855aac1",
+   "id": "6e6726c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f830ab7d",
+   "id": "1e529184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "60e029e4",
+   "id": "5945f331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c8c77794",
+   "id": "37b19dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "556966a9",
+   "id": "115f4828",
    "metadata": {},
    "outputs": [
     {
@@ -284,9 +284,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8319ea7d",
+   "metadata": {},
+   "source": [
+    "## Q4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4f6a7de",
+   "metadata": {},
+   "source": [
+    "Variance is defined by :\n",
+    "$$ \\sigma^2 = E[(X-E[X])^2] $$ <br>\n",
+    "To Prove :\n",
+    "$$ \\sigma^2 = E[X^2] - E[X]^2 \\text{for a discrete Random Variable} $$<br>\n",
+    "\n",
+    "Proof: <br>\n",
+    "$$ \\sigma^2 = E[(X-E[X])^2] $$<br>\n",
+    "$$ \\implies \\sigma^2 = E[X^2 -2XE[X] + E[X]^2] $$<br>\n",
+    "$$\\text{Using Linearity of Expectation}$$<br>\n",
+    "$$\\implies \\sigma^2 = E[X^2] -2E[XE[X]] + E[E[X]^2] $$<br>\n",
+    "$$\\text{As E[X] is a constant, and using Linearity of Expectation We get : }$$<br>\n",
+    "$$\\:\\: E[XE[X]] = E[X]E[X] \\:\\: \\text{and} \\:\\: E[E[X]^2] = E[X]^2 \\:\\: \\text{\\{Expectation of a constant value is the same constant value\\}}$$<br>\n",
+    "$$\\implies \\sigma^2 = E[X^2] -2(E[X])^2 + E[X]^2 $$<br>\n",
+    "$$\\implies \\sigma^2 = E[X^2] - E[X]^2 $$<br>\n",
+    "\n",
+    "Hence Using the Definition of Variance and Properties Like Linearity of Expectation and Expection of an Constant value is Constant we can prove the above property without requiring the Variable to be Contionous.<br>\n",
+    "Hence Proved\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "159e60a6",
+   "metadata": {},
+   "source": [
+    "# Q4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ce397b7",
+   "metadata": {},
+   "source": [
+    "$$\\text{Consider a Normal Random Variable}\\:X \\sim N(\\mu,\\sigma^2) $$\n",
+    "$$\\text{The PDF of X is given by :} \\: f(x) = \\frac{1}{\\sqrt{2\\pi}\\sigma}e^{\\frac{-(x-\\mu)^2}{2\\sigma^2}}$$<br>\n",
+    "$$ E[X] = \\int_{-\\infty}^{\\infty}f(x)xdx $$<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8f91c1",
+   "metadata": {},
+   "source": [
+    "$$ \\text{The Moment Generating Function is defined by}\\: M_x(t) = E[e^{tx}] $$<br>\n",
+    "$$ \\implies M_x(t) = \\int_{-\\infty}^{\\infty}f(x)e^{tx}dx $$<br>\n",
+    "$$\\implies M_x(t) =  \\int_{-\\infty}^{\\infty}\\frac{1}{\\sqrt{2\\pi\\sigma^2}}e^{tx-\\frac{(x-\\mu)^2}{2\\sigma^2}}dx $$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5860d1bc",
+   "metadata": {},
+   "source": [
+    "$$\\text{substituting} \\: u = \\frac{x-\\mu}{\\sqrt2\\sigma} \\: \\text{We get} \\: x = \\sqrt2u\\sigma +\\mu \\: \\text{and} \\: dx = \\sqrt2u\\sigma dv  $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42b090c4",
+   "metadata": {},
+   "source": [
+    "$$ \\implies M_x(t) = \\frac{1}{\\sqrt{\\pi}}\\int_{-\\infty}^{\\infty}e^{-u^2 + t\\mu + t\\sqrt{2}u\\sigma}du $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66dc49a5",
+   "metadata": {},
+   "source": [
+    "$$\\implies M_x(t) = \\frac{e^{t\\mu}}{\\sqrt{\\pi}}\\int_{-\\infty}^{\\infty}e^{-u^2  + t\\sqrt{2}u\\sigma}du $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8ba646b",
+   "metadata": {},
+   "source": [
+    "$$ \\implies M_x(t) = \\frac{e^{t\\mu}}{\\sqrt{\\pi}}\\int_{-\\infty}^{\\infty}e^{-u^2  + t\\sqrt{2}u\\sigma + \\frac{\\sigma^2t^2}{2} - \\frac{\\sigma^2t^2}{2}}du $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdd50741",
+   "metadata": {},
+   "source": [
+    "$$ \\implies M_x(t) = \\frac{e^{t\\mu}}{\\sqrt{\\pi}}\\int_{-\\infty}^{\\infty}e^{-\\{u^2  - 2(\\frac{t\\sigma}{\\sqrt2})(u) + (\\frac{t\\sigma}{\\sqrt2})^2 \\} + \\frac{\\sigma^2t^2}{2}}du $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cff4721",
+   "metadata": {},
+   "source": [
+    "$$ \\implies M_x(t) = \\frac{e^{t\\mu}}{\\sqrt{\\pi}}\\int_{-\\infty}^{\\infty}e^{-\\{u -\\frac{t\\sigma}{\\sqrt2} \\}^2 + \\frac{\\sigma^2t^2}{2}}du $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6b81df0",
+   "metadata": {},
+   "source": [
+    "$$  \\text{Substituting }\\: v = u - \\frac{t\\sigma}{\\sqrt2}\\: \\text{we get} \\: dv = du \\: \\text{and} \\: u = v + \\frac{t\\sigma}{\\sqrt2} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "379fbebd",
+   "metadata": {},
+   "source": [
+    "$$ \\implies M_x(t) = \\frac{e^{t\\mu +\\frac{\\sigma^2t^2}{2}}}{\\sqrt{\\pi}}\\int_{-\\infty}^{\\infty}e^{v^2}dv $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abf82179",
+   "metadata": {},
+   "source": [
+    "$$ \\int_{-\\infty}^{\\infty}e^{v^2}dv \\: \\text{is called the gaussian integral and is equal to} \\: \\frac{1}{\\sqrt\\pi}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e250be0a",
+   "metadata": {},
+   "source": [
+    "$$ \\implies M_x(t) = \\frac{\\sqrt{\\pi}e^{t\\mu + \\frac{\\sigma^2t^2}{2}}}{\\sqrt\\pi} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29c81013",
+   "metadata": {},
+   "source": [
+    "$$ \\implies M_x(t) = e^{t\\mu + \\frac{\\sigma^2t^2}{2}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a8656d1",
+   "metadata": {},
+   "source": [
+    "$$ E[X] = M_x^'(t) $$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b2f9af",
+   "id": "f00472a9",
    "metadata": {},
    "outputs": [],
    "source": []
