--- a/Assignment1/Assignment.ipynb
+++ b/Assignment1/Assignment.ipynb
@@ -710,8 +710,8 @@
    "id": "b35e0057",
    "metadata": {},
    "source": [
-    "$$\\text{c) A exponential curve with \\lambda = 1.5} $$<br>\n",
-    "$$\\text{Let X be a Exponential Random varible with \\lambda = 1.5 ,then the PDF is given by : } $$<br>\n",
+    "$$\\text{c) A exponential curve with }\\: \\lambda = 1.5 $$<br>\n",
+    "$$\\text{Let X be a Exponential Random varible with } \\: \\lambda = 1.5 \\:\\text{,then the PDF is given by : } $$<br>\n",
     "$$ f(x) = \\lambda{e^{-x\\lambda}} $$<br>\n",
     "$$\\text{And the CDF of X is given by : }$$<br>\n",
     "$$ F(x) = \\int_{0}^{\\infty}\\lambda{e^{-x\\lambda}}dx $$<br>\n",
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "3a2c2997",
    "metadata": {},
    "outputs": [],
