Final PDFs for Assignment 2 added

--- a/Assignment2/Assignment_2/Assignment 2.ipynb
+++ b/Assignment2/Assignment_2/Assignment 2.ipynb
@@ -58,8 +58,10 @@
    "id": "920b66ca",
    "metadata": {},
    "source": [
-    "$$\\text{Single Value Decomposition is more generalizable to Matrices than Eigen Value Decomposition as Single Value Decomposition } $$\n",
-    "$$\\text{can applied for both square and rectangular matrices,whereas Eigen Value Decomposition is only applicable to Square Matrices,} $$\n",
+    "$$\\text{Single Value Decomposition is more generalizable to Matrices than Eigen Value }$$\n",
+    "$$\\text{Decomposition as Single Value Decomposition } $$\n",
+    "$$\\text{can applied for both square and rectangular matrices,whereas Eigen Value Decomposition }$$\n",
+    "$$\\text{is only applicable to Square Matrices,} $$\n",
     "$$\\text{even then it is not applicable to all Square Matrices,just symmetric ones.} $$"
    ]
   },
@@ -353,7 +355,9 @@
    "id": "b2ea73e2",
    "metadata": {},
    "source": [
-    "$$ \\text{ Note that this vectors are not unique,given there are 3 other choice of combination(by selectively multiplying } v_1,v_2 \\text{ with - 1. Also note that } v_1,v_2 \\text{are ordered according to decreasing order of the modulus their respective Eigenvalue.}$$"
+    "$$ \\text{ Note that this vectors are not unique,given there are 3 other choice of combination(by selectively multiplying } $$\n",
+    "$$ v_1,v_2 \\text{ with - 1. Also note that } v_1,v_2 \\text{are ordered according to decreasing order of the modulus }$$\n",
+    "$$\\text{their respective Eigenvalue.}$$"
    ]
   },
   {
@@ -370,7 +374,11 @@
    "id": "374d5c79",
    "metadata": {},
    "source": [
-    "$$\\text{Now we want to compute U which a 3X3 Matrix. We know columns of U forms of Orthonormal Basis of the Space Ax.The singular Values of A is } \\sqrt(90) \\text{ and } \\sqrt(360) \\text{ hence the rank of A is 2 as there are two singular Values.Therefore the rank of Ax is also 2.The first two columns of U is therefore given by : } $$\n",
+    "$$\\text{Now we want to compute U which a 3X3 Matrix. We know columns of U forms of Orthonormal }$$\n",
+    "$$\\text{Basis of the Space Ax.} $$\n",
+    "$$ \\text{The singular Values of A is } \\sqrt 90 \\text{ and } \\sqrt 360 $$\n",
+    "$$\\text{ hence the rank of A is 2 as there are two singular Values.}$$\n",
+    "$$\\text{Therefore the rank of Ax is also 2.The first two columns of U is therefore given by : } $$\n",
     "$$ u_1 = \\frac{Av_1}{\\sigma_1} $$\n",
     "$$ u_2 = \\frac{Av_2}{\\sigma_2} $$"
    ]
@@ -488,8 +496,8 @@
    "metadata": {},
    "source": [
     "$$ \\text{Option C is also Correct.As all the points in X lie in a straight line, therefore the columns of X }$$\n",
-    "$$ \\text{which is NX2 Matrix are not linearly Independent and therefore its rank is 1,and such the number of nonzero singular} $$\n",
-    "$$ \\text{value in D is also 1.Hence D is not full rank}$$"
+    "$$ \\text{which is NX2 Matrix are not linearly Independent and therefore its rank is 1,and as such the number of }$$\n",
+    "$$ \\text{nonzero singular value in D is also 1.Hence D is not full rank}$$"
    ]
   },
   {
@@ -505,7 +513,8 @@
    "id": "6f64a83f",
    "metadata": {},
    "source": [
-    "$$\\text{It is False.It is not neccessary PCA preserves Useful Information for MultiClass Classification,only just that it maximizes the variance} $$"
+    "$$\\text{It is False.It is not neccessary PCA preserves Useful Information for MultiClass Classification,}$$\n",
+    "$$\\text{only just that it maximizes the variance} $$"
    ]
   },
   {
