--- a/Assignment2/Assignment_2/KNN classifier.ipynb
+++ b/Assignment2/Assignment_2/KNN classifier.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "69cac090",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "e0fa6912",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "1ca8135b",
    "metadata": {},
    "outputs": [],
@@ -69,8 +69,7 @@
       "(120, 4)\n",
       "(120,)\n",
       "(30, 4)\n",
-      "(30,)\n",
-      "120\n"
+      "(30,)\n"
      ]
     }
    ],
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "74296f03",
    "metadata": {},
    "outputs": [],
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "f247b1fc",
    "metadata": {},
    "outputs": [],
@@ -128,497 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "e98e4830",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-virginica\n",
-      "Iris-virginica\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-versicolor\n",
-      "Iris-setosa\n",
-      "Iris-setosa\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "K_vals = [1,3,5,7,9,11,13,15]\n",
     "Accuracy = []\n",
@@ -632,8 +144,8 @@
     "    for j in range(d):\n",
     "        input_x = X_test[j]\n",
     "        res_y = KNN_Classifier(k,X_train,y_train,input_x)\n",
-    "        print(res_y)\n",
-    "        print(y_test[j])\n",
+    "        #print(res_y)\n",
+    "        #print(y_test[j])\n",
     "        if(res_y == y_test[j]): \n",
     "            acc += 1\n",
     "    A.append(acc)\n",
@@ -645,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "36aa708d",
    "metadata": {},
    "outputs": [
@@ -665,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "ab99ff4a",
    "metadata": {},
    "outputs": [
@@ -675,7 +187,7 @@
        "Text(0, 0.5, 'Accuracy')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
